[project]
name = "tot_plus"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tot_plus='tot_plus.plus:plus'

[tool.pdm]
distribution = true
